#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([QTPIE], [1.0-rc2], [jiahao@mit.edu])

AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Wall -Werror])

AC_PROG_FC

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_FC_LIBRARY_LDFLAGS

# Checks for libraries.

AC_CHECK_LIB([blas],[ddot dnrm2 dcopy daxpy dgemv])
AC_CHECK_LIB([lapack],[dgelss])

# Checks for header files.

# Debug mode

AC_ARG_ENABLE(debug,
 [AS_HELP_STRING([--enable-debug],[Enable debugging])],
 [debug=debug
  AM_CONDITIONAL([DEBUG], [true])],
 [debug=normal
  AM_CONDITIONAL([DEBUG], [false])])



# Check if TINKER exists

AM_CONDITIONAL([WITH_TINKER], [false])
AC_ARG_WITH(tinker,
[AS_HELP_STRING([--with-tinker<=srcdir>],[Compile API for TINKER with source directory <srcdir>])],
[if test "x$withval" != "xno" -a "x$withval" != "xn"; then
    if test "x$withval" != "xyes" -a "x$withval" != "xy" -a "x$withval" != "x"; then
        tinkerdir="$withval"
    fi
    echo Compiling TINKER API
    AM_CONDITIONAL([WITH_TINKER], [true])
    AC_SUBST([TINKER_DIR], [$tinkerdir])
 fi], [])



# Check for doxygen

AM_CONDITIONAL([HAVE_DOXYGEN], [test x`which doxygen` != x])



# Checks for typedefs, structures, and compiler characteristics.

AC_CANONICAL_BUILD



#Check if CPU is 64-bit, and default to enable it if it is
case "$build_cpu" in
	x86_64*)
		AC_SUBST([ARCH],["-m64"])
	;;
	*)
		AC_SUBST([ARCH])
	;;
esac
# Check if user wants to force the issue

AC_ARG_ENABLE(64bit,
 [AS_HELP_STRING([--enable-64bit],[Enable 64-bit code])],
 [AC_SUBST([ARCH],["-m64"])], [])



# Compiler specific flags

case "$FC:$debug" in 
	gfortran:debug*)
		AC_SUBST([FORTRANFLAGS],["-C -g3 -ggdb -Wall -Wextra -Waliasing -Wsurprising \
-pedantic -fbounds-check -dH -fbacktrace -frange-check -fimplicit-none \
-ffpe-trap=invalid,zero,overflow"])
	;;
	gfortran:normal*)
		AC_SUBST([FORTRANFLAGS],["-Wall -Wextra -Waliasing -Wsurprising \
-pedantic -O3 -ftree-vectorize -ffast-math -malign-double \
-ffinite-math-only"])
	;;
	ifort:debug*)
		AC_SUBST([FORTRANFLAGS],["-C -g -fpe0 -debug full -ftrapuv"])
	;;
	ifort:normal*)
		AC_SUBST([FORTRANFLAGS],["-fast"])
	;;
	pgf90:debug*)
		AC_SUBST([FORTRANFLAGS],["-C -g -Kieee -Ktrap=fp,denorm,unf -Mdclchk -Mneginfo \
-Mbounds -Mchkstk -Mchkptr -Mchkfpstk  -Minform=inform"])
	;;
	pgf90:normal*)
		AC_SUBST([FORTRANFLAGS],["-fast"])
	;;
	*)
		echo Unknown combination of compiler $FC and $debug debugging options
	;;
esac

# Checks for library functions.


AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
